<resources>
    <string name="app_name">ColorMyViewApp</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="box_yellow">YELLOW</string>
    <string name="box_green">GREEN</string>
    <string name="box_red">RED</string>
    <string name="how_to_play">How to play:</string>
    <string name="info_txt">To play this game, tap the boxes you want to color</string>
</resources>
