<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraint_layout">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginStart="@dimen/margin_wide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/box_one_txt"
            style="@style/whiteBox"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two_txt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_txt" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" style="@style/whiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_txt" style="@style/whiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four_txt"
            app:layout_constraintTop_toTopOf="@+id/box_two_txt" app:layout_constraintStart_toEndOf="@+id/box_two_txt"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_txt" style="@style/whiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box_three_txt"
            app:layout_constraintBottom_toTopOf="@+id/box_five_txt"
            app:layout_constraintStart_toEndOf="@+id/box_two_txt"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_txt" style="@style/whiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_txt"
            app:layout_constraintTop_toBottomOf="@+id/box_four_txt"
            app:layout_constraintStart_toEndOf="@+id/box_two_txt" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/HowToPlay"
            style="@style/Widget.AppCompat.TextView.SpinnerItem" android:fontFamily="@font/roboto"
            android:textSize="24sp" app:layout_constraintBaseline_toBaselineOf="@+id/info_txt"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/info_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/info_txt" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/box_two_txt"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="16dp" android:textSize="12sp"
            android:textAlignment="textStart" app:layout_constraintDimensionRatio="w,0:0"
            app:layout_constraintStart_toEndOf="@+id/HowToPlay" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/box_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn"
            app:layout_constraintEnd_toStartOf="@+id/yellow_btn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/box_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_btn" app:layout_constraintEnd_toStartOf="@+id/green_btn"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/red_btn" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/info_txt"/>
    <Button
            android:text="@string/box_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/yellow_btn"
            app:layout_constraintHorizontal_bias="0.5"/>

</android.support.constraint.ConstraintLayout>